--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -86,6 +86,9 @@
 			<a class="twitter tooltips" data-container="body" data-placement="top" data-trigger="hover" data-title="Twitter" target="_blank" href="http://www.twitter.com/3886records"><i class="icon-twitter-sign icon-large"></i></a>
 			<a class="youtube tooltips" data-container="body" data-placement="top" data-trigger="hover" data-title="Youtube" target="_blank" href="http://www.youtube.com/user/3886records"><i class="icon-youtube-sign icon-large"></i></a>
 		</div>
+		<nav>
+			<a data-method="async" href="/disclaimer">Imprint / Disclaimer</a>
+		</nav>
     </div>
   </div>
 </footer>
